# Shielded-CMDP-Optimization

./: .gitignore  .pre-commit-config.yaml  33bus_statistical_results.txt  3_Statistical_Analysis.ipynb  4_Visualization_Results.ipynb  COMPREHENSIVE_33BUS_ANALYSIS.md  COMPUTATIONAL_OVERHEAD_ANALYSIS.md  CROSS_SYSTEM_COMPARISON.md  FAILURE_CASE_ANALYSIS.md  LICENSE  LIST_OF_FIGURES.md  LIST_OF_SYMBOLS.md  LIST_OF_TABLES.md  MSC_APPENDIX_A_PARAMETERS.md  MSC_APPENDIX_C_CODE.md  MSC_APPENDIX_D_TOPOLOGY.md  MULTI_SEED_ANALYSIS.md  Notebook1_Shield_Implementation.ipynb  Notebook2_Training_Demo.ipynb  README.md  RESULTS_SUMMARY.csv  actor_mlp_wrapper.py  custom_focops.py  custom_logger.py  debug_violations.py  focops_cfg.yaml  ieee33_wrapper.py  ieee69_wrapper.py  launch_focops.py  launch_focops_hybrid.py  launch_ppo_lag.py  lightweight_smoke_test_script.py  omnisafe310_env.yml  omnisafe_ieee33_wrapper.py  pyproject.toml  register_envs.py  results_summary_table.csv  results_summary_table.tex  run_33bus_experiments.ps1  run_a2c.py  (+10 more)
ppo_shielded_tensorboard/PPO_1/: events.out.tfevents.1761835484.JO-hasan-muhaidat-WIN-P.1812.0
ppo_shielded_tensorboard/PPO_2/: events.out.tfevents.1761837363.JO-hasan-muhaidat-WIN-P.16564.0
ppo_shielded_tensorboard/PPO_3/: events.out.tfevents.1761846155.JO-hasan-muhaidat-WIN-P.9868.0
rl_constrained_smartgrid_control/algorithms/: cpo.py  ddpg.py  sac.py
rl_constrained_smartgrid_control/environments/: base.py  bus33_environment.py  bus69_environment.py
tests/: test_focops_smoke.py
(+175 files in other folders)
